--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.11",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
@@ -68,13 +69,16 @@
     "@adonisjs/vite": "^4.0.0",
     "@aws-sdk/client-ses": "^3.817.0",
     "@inertiajs/vue3": "^2.0.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@vinejs/vine": "^3.0.1",
     "better-sqlite3": "^11.10.0",
     "edge.js": "^6.2.1",
     "luxon": "^3.6.1",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2",
-    "vue": "^3.5.14"
+    "vue": "^3.5.14",
+    "vue-json-pretty": "^2.5.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "hotHook": {
     "boundaries": [
